--- a/index.html
+++ b/index.html
@@ -8,14 +8,33 @@
     <title>Assignment-1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
 </head>
 
 <body>
-    <div class="font-poppins">
-
+    <div>
+        <section class="flex-content">
+            <div class="half-width">
+                <div class="font-lora left-border">
+                    <h1>Stay Focused on <br> <span class="orange-color">Mission 2022</span></h1>
+                </div>
+                <div class="font-poppins">
+                    <p>My Mission in 2022 is to find myself as a full stack web developer. Not only that, but also a
+                        PYTHON,
+                        JAVA etc. programmer. Now its not only my Mission but also my lifestyle.</p>
+                    <div style="margin: 50px 0 30px 0;">
+                        <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Explore Now</a>
+                    </div>
+                    <small>Scroll down to explore more about us</small>
+                </div>
+            </div>
+            <div class="half-width">
+                <img src="images/person-2.png" alt="Profile Picture">
+            </div>
+        </section>
     </div>
 </body>
 
