--- a/index.html
+++ b/index.html
@@ -35,6 +35,29 @@
                 <img src="images/person-2.png" alt="Profile Picture">
             </div>
         </section>
+        <section class="font-poppins">
+            <h2 class="text-center"> <span class="navy-color">My Mission in</span> <span
+                    class="orange-color">2022</span></h2>
+            <div class="flex-content">
+                <div class="one-third-width bluish">
+                    <img src="images/illustrator-1.png" alt="Mission Illustrator">
+                    <h3>Mission</h3>
+                    <p>Fist of all, I want to complete Web development course under Jhankar mahbub so that my dream to
+                        become full stack web developer come true.</p>
+                </div>
+                <div class="one-third-width violetish">
+                    <img src="images/illustrator-2.png" alt="Vission Illustrator">
+                    <h3>Vission</h3>
+                    <p>In 2022, I wanna establish myself in yhe field of ICT as a full stack web developer</p>
+                </div>
+                <div class="one-third-width pinkish">
+                    <img src="images/illustrator-3.png" alt="Goal Illustrator">
+                    <h3>Goals</h3>
+                    <p>I Wanna establish a IT farm in near future so that i can contribute in eradicating unemployment
+                        problem of Bangladesh</p>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 
