Develop without Limits

--- a/index.html
+++ b/index.html
@@ -15,50 +15,65 @@
 </head>
 
 <body>
-    <div>
-        <section class="flex-content">
-            <div class="half-width">
-                <div class="font-lora left-border">
-                    <h1>Stay Focused on <br> <span class="orange-color">Mission 2022</span></h1>
-                </div>
-                <div class="font-poppins">
-                    <p>My Mission in 2022 is to find myself as a full stack web developer. Not only that, but also a
-                        PYTHON,
-                        JAVA etc. programmer. Now its not only my Mission but also my lifestyle.</p>
-                    <div style="margin: 50px 0 30px 0;">
-                        <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Explore Now</a>
-                    </div>
-                    <small>Scroll down to explore more about us</small>
-                </div>
+    <section class="flex-content">
+        <div class="half-width">
+            <div class="font-lora left-border">
+                <h1>Stay Focused on <br> <span class="orange-color">Mission 2022</span></h1>
             </div>
-            <div class="half-width">
-                <img src="images/person-2.png" alt="Profile Picture">
+            <div class="font-poppins">
+                <p>My Mission in 2022 is to find myself as a full stack web developer. Not only that, but also a
+                    PYTHON,
+                    JAVA etc. programmer. Now its not only my Mission but also my lifestyle.</p>
+                <div style="margin: 50px 0 30px 0;">
+                    <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Explore Now</a>
+                </div>
+                <small>Scroll down to explore more about us</small>
             </div>
-        </section>
-        <section class="font-poppins">
-            <h2 class="text-center"> <span class="navy-color">My Mission in</span> <span
-                    class="orange-color">2022</span></h2>
-            <div class="flex-content">
-                <div class="one-third-width bluish">
-                    <img src="images/illustrator-1.png" alt="Mission Illustrator">
-                    <h3>Mission</h3>
-                    <p>Fist of all, I want to complete Web development course under Jhankar mahbub so that my dream to
-                        become full stack web developer come true.</p>
-                </div>
-                <div class="one-third-width violetish">
-                    <img src="images/illustrator-2.png" alt="Vission Illustrator">
-                    <h3>Vission</h3>
-                    <p>In 2022, I wanna establish myself in yhe field of ICT as a full stack web developer</p>
-                </div>
-                <div class="one-third-width pinkish">
-                    <img src="images/illustrator-3.png" alt="Goal Illustrator">
-                    <h3>Goals</h3>
-                    <p>I Wanna establish a IT farm in near future so that i can contribute in eradicating unemployment
-                        problem of Bangladesh</p>
-                </div>
+        </div>
+        <div class="half-width">
+            <img src="images/person-2.png" alt="Profile Picture">
+        </div>
+    </section>
+    <section class="font-poppins">
+        <h2 class="text-center"> <span class="navy-color">My Mission in</span> <span class="orange-color">2022</span>
+        </h2>
+        <div class="flex-content">
+            <div class="one-third-width bluish">
+                <img src="images/illustrator-1.png" alt="Mission Illustrator">
+                <h4>Mission</h4>
+                <p>Fist of all, I want to complete Web development course under Jhankar Mahbub bro, so that my dream
+                    to
+                    become full stack web developer come true.</p>
             </div>
-        </section>
-    </div>
+            <div class="one-third-width violetish">
+                <img src="images/illustrator-2.png" alt="Vission Illustrator">
+                <h4>Vission</h4>
+                <p>In 2022, I wanna establish myself in yhe field of ICT as a full stack web developer</p>
+            </div>
+            <div class="one-third-width pinkish">
+                <img src="images/illustrator-3.png" alt="Goal Illustrator">
+                <h4>Goals</h4>
+                <p>I Wanna establish a IT farm in near future so that i can contribute in eradicating unemployment
+                    problem of Bangladesh</p>
+
+            </div>
+        </div>
+    </section>
+    <section class="flex-content font-poppins bacground-image">
+        <div class="half-width">
+            <img src="images/coding.png" alt="">
+        </div>
+        <div class="half-width">
+            <h3 style="margin-top: 100px;">Develop <br> Without Limits</h3>
+            <p>Develop whatever you want when you familier with HTML & CSS. Don't limit yourself in any boundery.
+                whatever you see on eyes, try it to transform that in HTML web.</p>
+            <div style="margin: 50px 0 30px 0;">
+                <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Read the
+                    Document</a>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
