--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             </div>
         </div>
     </section>
-    <section class="flex-content font-poppins bacground-image">
+    <section class="flex-content font-poppins bacground-image-develop">
         <div class="half-width">
-            <img src="images/coding.png" alt="">
+            <img src="images/coding.png" alt="develop without limit pic">
         </div>
         <div class="half-width">
             <h3 style="margin-top: 100px;">Develop <br> Without Limits</h3>
@@ -72,6 +72,21 @@
                     Document</a>
             </div>
         </div>
+    </section>
+    <section class="flex-content font-poppins background-image-community">
+        <div class="half-width">
+            <h3>Know our <br> Global Community</h3>
+            <p>To figure a flag mark in any field, One must know the global community of that revelent field. So, to be
+                a leader web development field you must know developer community.</p>
+            <div style="margin: 50px 0 30px 0;">
+                <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Read the
+                    Document</a>
+            </div>
+        </div>
+        <div class="half-width">
+            <img src="images/project.png" alt="Global community pic">
+        </div>
+
     </section>
 
 </body>
