--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
         </div>
 
     </section>
+    <section>
+
+    </section>
+    <footer>
+        <span>Mission <span class="tomato-color">2022</span></span> <br>
+        <small class="font-poppins">Hard Work, Perseverance and Determination for 2022</small>
+    </footer>
 
 </body>
 
