Extra part added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="images/coding.png" alt="develop without limit pic">
         </div>
         <div class="half-width">
-            <h3 style="margin-top: 100px;">Develop <br> Without Limits</h3>
+            <h3 style="margin-top: 50px;">Develop <br> Without Limits</h3>
             <p>Develop whatever you want when you familier with HTML & CSS. Don't limit yourself in any boundery.
                 whatever you see on eyes, try it to transform that in HTML web.</p>
             <div style="margin: 50px 0 30px 0;">
@@ -88,8 +88,21 @@
         </div>
 
     </section>
-    <section>
-
+    <section class="font-poppins">
+        <h2 class="text-center"><span class="navy-color">Learn </span><span class="orange-color">Web Development</span>
+        </h2>
+        <div class="flex-content back-image-learn-web">
+            <div class="half-width">
+                <img src="images/programming-hero.png" alt="Programming-Hero Picture">
+            </div>
+            <div class="half-width" style="margin-top: 50px;">
+                <h3>Get in Touch</h3>
+                <p>It is one of the best web learning organization. You can learn web development here if you determine
+                    to do hard work, passionate about programming and perseverance.</p>
+                <div style="margin: 50px 0 30px 0;">
+                    <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Learn More</a>
+                </div>
+            </div>
     </section>
     <footer>
         <span>Mission <span class="tomato-color">2022</span></span> <br>
