font lora on learn web added

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         </div>
 
     </section>
-    <section class="font-poppins">
+    <section class="font-lora">
         <h2 class="text-center"><span class="navy-color">Learn </span><span class="orange-color">Web Development</span>
         </h2>
-        <div class="flex-content back-image-learn-web">
+        <div class="flex-content back-image-learn-web font-poppins">
             <div class="half-width">
                 <img src="images/programming-hero.png" alt="Programming-Hero Picture">
             </div>
