some text edited

--- a/index.html
+++ b/index.html
@@ -41,19 +41,20 @@
             <div class="one-third-width bluish">
                 <img src="images/illustrator-1.png" alt="Mission Illustrator">
                 <h4>Mission</h4>
-                <p>Fist of all, I want to complete Web development course under Jhankar Mahbub bro, so that my dream
+                <p>First of all, I want to complete Web development course under Jhankar Mahbub bro, so that my dream
                     to
                     become full stack web developer come true.</p>
             </div>
             <div class="one-third-width violetish">
                 <img src="images/illustrator-2.png" alt="Vission Illustrator">
                 <h4>Vission</h4>
-                <p>In 2022, I wanna establish myself in yhe field of ICT as a full stack web developer</p>
+                <p>In 2022, I wanna establish myself in the field of ICT as a full stack web developer. I also
+                    nourishing myself learning PYTHON and JAVA</p>
             </div>
             <div class="one-third-width pinkish">
                 <img src="images/illustrator-3.png" alt="Goal Illustrator">
                 <h4>Goals</h4>
-                <p>I Wanna establish a IT farm in near future so that i can contribute in eradicating unemployment
+                <p>I Wanna establish an IT farm in near future, so that i can contribute in eradicating unemployment
                     problem of Bangladesh</p>
 
             </div>
@@ -65,7 +66,7 @@
         </div>
         <div class="half-width">
             <h3 style="margin-top: 50px;">Develop <br> Without Limits</h3>
-            <p>Develop whatever you want when you familier with HTML & CSS. Don't limit yourself in any boundery.
+            <p>Develop whatever you want, when you familier with HTML & CSS. Don't limit yourself in any boundery.
                 whatever you see on eyes, try it to transform that in HTML web.</p>
             <div style="margin: 50px 0 30px 0;">
                 <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Read the
@@ -77,7 +78,7 @@
         <div class="half-width">
             <h3>Know our <br> Global Community</h3>
             <p>To figure a flag mark in any field, One must know the global community of that revelent field. So, to be
-                a leader web development field you must know developer community.</p>
+                a leader in web development field, you must know the developer community.</p>
             <div style="margin: 50px 0 30px 0;">
                 <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Read the
                     Document</a>
