target:_blank added in link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     PYTHON,
                     JAVA etc. programmer. Now its not only my Mission but also my lifestyle.</p>
                 <div style="margin: 50px 0 30px 0;">
-                    <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Explore Now</a>
+                    <a target="_blank" class="link-text"
+                        href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Explore Now</a>
                 </div>
                 <small>Scroll down to explore more about us</small>
             </div>
@@ -69,7 +70,8 @@
             <p>Develop whatever you want, when you familier with HTML & CSS. Don't limit yourself in any boundery.
                 whatever you see on eyes, try it to transform that in HTML web.</p>
             <div style="margin: 50px 0 30px 0;">
-                <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Read the
+                <a target="_blank" class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Read
+                    the
                     Document</a>
             </div>
         </div>
@@ -80,7 +82,8 @@
             <p>To figure a flag mark in any field, One must know the global community of that revelent field. So, to be
                 a leader in web development field, you must know the developer community.</p>
             <div style="margin: 50px 0 30px 0;">
-                <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Read the
+                <a target="_blank" class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Read
+                    the
                     Document</a>
             </div>
         </div>
@@ -101,7 +104,8 @@
                 <p>It is one of the best web learning organization. You can learn web development here if you determine
                     to do hard work, passionate about programming and perseverance.</p>
                 <div style="margin: 50px 0 30px 0;">
-                    <a class="link-text" href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Learn More</a>
+                    <a target="_blank" class="link-text"
+                        href="https://www.linkedin.com/in/kashem-md-abul-364304a3/">Learn More</a>
                 </div>
             </div>
     </section>
